--- a/todo
+++ b/todo
@@ -1,6 +1,9 @@
-[top]
+[notes]
 
-* tech out reading json strings as python dictionaries.
+
+
+
+[top]
 
 * draw the map tiles. I like 32x32 blocks.
 
@@ -18,3 +21,10 @@
 * tracked module music. I have some I wrote, but ideally for this task
     to work I need to 1) contact modders who would like to offer their
     work, 2) tech out a module player library. libmikmod is first choice.
+
+
+[done]
+
+# day 1
+* map.py for loading map data and building a list of blocked tiles
+* drink coffee.
