todo and fixme items

--- a/todo
+++ b/todo
@@ -1,10 +1,10 @@
-* implement a player walked path for 'follower' ai modes to pick up on if they cross it. (a future ability will reduce your path history)
+* add an abilities screen that shows available upgrades
+
+* add the UI button class
 
 * add a 'ondeath' object action that triggers during combat
 
 * implement abilities
-
-* add the UI button class
 
 * create the menu with story selection
 
@@ -18,3 +18,7 @@
     File "aliveModel.py", line 279, in healcharacters
         if npc.health < npc.maxhealth:
     AttributeError: 'Mapobject' object has no attribute 'health'
+
+# done
+
+* implement a player walked path for 'follower' ai modes to pick up on if they cross it. (a future ability will reduce your path history)
