--- a/todo
+++ b/todo
@@ -1,8 +1,6 @@
-* add error handling in view render() - and where else?
-
-* implement a line of sight function
-
-* use los function for marking tiles and objects as seen
+* look at moving story dialogue to a conf file (or all story for that matter)
+* trigger events after x turns:
+  * process triggers from a list
 
 * add an abilities screen that shows available upgrades
 
@@ -17,10 +15,3 @@
 * save game state
 
 * find music to play randomly from a playlist. remove from playlist once played.
-
-* if a 'ai' object type is not defined in story.py then it fails:
-
-    line 214, in movecharacter self.healcharacters()
-    File "aliveModel.py", line 279, in healcharacters
-        if npc.health < npc.maxhealth:
-    AttributeError: 'Mapobject' object has no attribute 'health'
