--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 
 # RELEASE Y.T.
 
+* disable hover and hide mouse
+
 * site upload issue: find scp does not do directory structure :(
 
 * build a character screen to show with sections:
