--- a/todo
+++ b/todo
@@ -3,8 +3,6 @@
 
 ## implement ability actions
 
-* create a helper Post() in each model part for evManager.Post()
-
 * site upload issue: find scp does not do directory structure :(
 
 * add a 'ondeath' object action that triggers during combat - what was this for again?
@@ -25,3 +23,5 @@
     * achievements
 
 * the player can choose a tile to target.
+
+* action upgrades that require a target, and those that have a timed effect.
