done player level fail screen

--- a/todo
+++ b/todo
@@ -1,8 +1,6 @@
 # RELEASE Y.T.
 
-* handle player death by showing a sad screen, after which the level is restarted. keep a player copy handy for this to revert any upgrades, bonuses and such.
-
-* move the model upgrades_available value to the character level.
+* draw a player crash animation.
 
 * create the menu with story selection, or resume a previously saved game.
 
