--- a/todo
+++ b/todo
@@ -6,6 +6,8 @@
 
 * need a @command to change an object property values, like "type" and "modes".
 
+* show the level title on the main screen, or the info screen.
+
 * create the menu with story selection, or resume a previously saved game.
 
 * smooth sprite and viewport movement
