--- a/CHANGES
+++ b/CHANGES
@@ -8,3 +8,4 @@
 * Passive upgrades that have a lasting effect each turn.
 * Active upgrades that have a one-time or a timed effect.
 * Upgrades that target specific enemies.
+* buttery smooth sprite and viewport movement
