show the level title in the info screen.

--- a/CHANGES
+++ b/CHANGES
@@ -10,3 +10,4 @@
 * Upgrades that target specific enemies.
 * buttery smooth sprite and viewport movement
 * auto save and restore the game from the beginning of the level.
+* show the level title in the info screen.
