move todo items to changes

--- a/CHANGES
+++ b/CHANGES
@@ -11,3 +11,5 @@
 * buttery smooth sprite and viewport movement
 * auto save and restore the game from the beginning of the level.
 * show the level title in the info screen.
+* menu with story selection, or resume a previously saved game.
+
