todo and changes update

--- a/CHANGES
+++ b/CHANGES
@@ -13,3 +13,4 @@
 * show the level title in the info screen.
 * menu with story selection, or resume a previously saved game.
 * objects have internal counters used for arbitrary command triggers
+* a command to change the attributes of any AI within a region
