--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 # RELEASE Y.T.
 
+* a command to spawn an arbitrary amount of AI by name within a region
+
 * need a @command to change an object property values, like "type" and "modes".
 
 * configure list of songs to loop during play. see if we can pause when switching to the main menu while a game is in progress.
